# desrete_analysis_labs

lab1/: CMakeLists.txt  ReportLab1.odt  sum.cpp
lab1/include/: array.hpp  lib.hpp
lab1/src/: main.cpp
lab1/test/: CMakeLists.txt  algorithm_test.cpp  array_test.hpp
lab2/: CMakeLists.txt  README.md  genAndRunTests.py  profileOnTest.py
lab2/cmake/: rbtree.cmake
lab2/include/: rb_tree.hpp  rb_tree_exceptions.hpp
lab2/src/: main  main.cpp
lab2/test/: CMakeLists.txt  rb_tree_test.cpp
lab3/: ReportLab3.odt
lab4/: CMakeLists.txt  README.md  ReportLab4.odt  getTest.py  patternAndTextGenerator.py  result  test  test.py
lab4/cmake/: kmp_algo.cmake
lab4/src/: main.cpp
lab_templ/: CMakeLists.txt  DAReport.odt  algorithm_test.cpp
lab_templ/test/: CMakeLists.txt
